--- a/assets/style/extrn.css
+++ b/assets/style/extrn.css
@@ -1,5 +1,6 @@
 .sizeH{
 	height: 100px;
+	margin-top: -40px;
 }
 .sizeF{
 	position: fixed;
@@ -13,3 +14,21 @@
 	font-weight: bold;
 	text-align: center;
 }
+.maindiv{
+	margin-top: 10px;
+}
+#imgA{
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	opacity: 0.8;
+	position: absolute;
+}
+
+i{
+	margin-top: -6px;
+}
+.footerdiv{
+	margin-left: 30px;
+}
+
